--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -2222,7 +2222,7 @@
   justify-content: space-between;
 }
 .s1fmmrzi[class][class] {
-  font-size: var(--iw-ehf-f);
+  font-size: var(--font-size);
   line-height: var(---s-l-myu);
   color: var(--fo-jk-r-s);
   font-weight: var(--e-y-j-d-v-j);
@@ -5117,7 +5117,7 @@
   font-weight: var(--title_font-weight);
 }
 .listing-card-title-clamp-2 {
-  font-size: var(--iw-ehf-f);
+  font-size: var(--font-size);
   line-height: var(---s-l-myu);
   line-height: var(---s-l-myu);
   overflow: hidden;
@@ -5611,7 +5611,7 @@
     var(--margin-left, 0);
 }
 .landscape-card-primary-line-text {
-  font-size: var(--iw-ehf-f);
+  font-size: var(--font-size);
   line-height: var(---s-l-myu);
   line-height: var(---s-l-myu);
   max-height: calc(1 * var(---s-l-myu));
@@ -5660,7 +5660,7 @@
 }
 .card__btn-save {
   font-family: var(--font-family);
-  font-size: var(--iw-ehf-f);
+  font-size: var(--font-size);
   line-height: var(---s-l-myu);
   font-weight: var(--jx-zk-pv);
   outline: 0;
@@ -7430,7 +7430,7 @@ select[disabled] {
 }
 .jumbotron-btn-search-bg[class][class] {
   font-family: var(--font-family);
-  font-size: var(--iw-ehf-f);
+  font-size: var(--font-size);
   line-height: var(---s-l-myu);
   font-weight: var(--jx-zk-pv);
   outline: 0;
@@ -7567,7 +7567,7 @@ select[disabled] {
   }
 }
 .jumbotron-header-desc[class][class] {
-  font-size: var(--iw-ehf-f);
+  font-size: var(--font-size);
   line-height: var(---s-l-myu);
   font-weight: var(--e-y-j-d-v-j);
   color: var(--fo-jk-r-s);
@@ -7729,7 +7729,7 @@ select[disabled] {
   align-items: center;
   width: 100%;
   font-weight: var(--jx-zk-pv);
-  font-size: var(--iw-ehf-f);
+  font-size: var(--font-size);
   line-height: var(---s-l-myu);
 }
 .dir.button__border[class][class] {
@@ -10294,7 +10294,7 @@ h3:first-child {
   }
 }
 .sv8pn08[class][class] {
-  font-size: var(--iw-ehf-f);
+  font-size: var(--font-size);
   line-height: var(---s-l-myu);
 }
 .dir.sv8pn08[class][class] {
@@ -10329,7 +10329,7 @@ h3:first-child {
   }
 }
 .rat82ei[class][class] {
-  font-size: var(--iw-ehf-f);
+  font-size: var(--font-size);
   line-height: var(---s-l-myu);
   display: grid;
   grid-gap: 16px;
@@ -10340,7 +10340,7 @@ h3:first-child {
 }
 @media (min-width: 375px) {
   .rat82ei[class][class] {
-    font-size: var(--y-g-ar-y);
+    font-size: var(--font-size);
     line-height: var(--cb-pewj);
   }
 }
@@ -10666,7 +10666,7 @@ h3:first-child {
   width: 100%;
   color: var(--f-k-smk-x);
   font-family: inherit;
-  font-size: var(--iw-ehf-f);
+  font-size: var(--font-size);
   line-height: var(---s-l-myu);
   font-weight: var(--jx-zk-pv);
 }
@@ -10753,7 +10753,7 @@ h3:first-child {
   min-width: 48px;
   outline: 0;
   -webkit-tap-highlight-color: transparent;
-  font-size: var(--iw-ehf-f);
+  font-size: var(--font-size);
   line-height: var(---s-l-myu);
   font-weight: var(--jx-zk-pv);
   color: var(--f-mkcy-f);
@@ -10867,7 +10867,7 @@ h3:first-child {
   padding-left: 12px;
 }
 .m15bpvrt[class][class] {
-  font-size: var(--iw-ehf-f);
+  font-size: var(--font-size);
   line-height: var(---s-l-myu);
   color: var(--f-k-smk-x);
   display: -webkit-box;
@@ -10998,7 +10998,7 @@ h3:first-child {
 }
 .s1pd4s60[class][class] {
   font-family: var(--font-family);
-  font-size: var(--iw-ehf-f);
+  font-size: var(--font-size);
   line-height: var(---s-l-myu);
   font-weight: var(--jx-zk-pv);
   border-radius: var(--border-radius);
@@ -11203,7 +11203,7 @@ h3:first-child {
   margin-bottom: var(--spacer-2);
 }
 .s12spazh[class][class] {
-  font-size: var(--y-g-ar-y);
+  font-size: var(--font-size);
   line-height: var(--cb-pewj);
   font-weight: var(--e-y-j-d-v-j);
   color: var(--fo-jk-r-s);
@@ -11509,7 +11509,7 @@ h3:first-child {
   }
 }
 .c1gjppgi[class][class] {
-  font-size: var(--iw-ehf-f);
+  font-size: var(--font-size);
   line-height: var(---s-l-myu);
 }
 @media (min-width: 744px) {
@@ -11702,7 +11702,7 @@ h3:first-child {
   }
 }
 .t1ga81a[class][class] {
-  font-size: var(--iw-ehf-f);
+  font-size: var(--font-size);
   line-height: var(---s-l-myu);
   font-weight: var(--jx-zk-pv);
   width: 100%;
@@ -12002,7 +12002,7 @@ h3:first-child {
   -ms-touch-action: manipulation !important;
   touch-action: manipulation !important;
   font-family: var(--font-family) !important;
-  font-size: var(--iw-ehf-f) !important;
+  font-size: var(--font-size) !important;
   line-height: var(---s-l-myu) !important;
   font-weight: var(--jx-zk-pv) !important;
   border-radius: var(--border-radius) !important;
@@ -14256,7 +14256,7 @@ h3:first-child {
   cursor: pointer !important;
   display: inline-block !important;
   font-family: inherit !important;
-  font-size: var(--iw-ehf-f) !important;
+  font-size: var(--font-size) !important;
   font-weight: var(--jx-zk-pv) !important;
   line-height: 16px !important;
   margin: 0 !important;
@@ -16669,7 +16669,7 @@ h3:first-child {
   text-decoration: none;
   user-select: auto;
   color: var(--f-mkcy-f);
-  font-size: var(--iw-ehf-f);
+  font-size: var(--font-size);
   font-weight: var(--jx-zk-pv);
   height: 48px;
   line-height: 16px;
@@ -16853,7 +16853,7 @@ h3:first-child {
 }
 .header__search-tabs-item-btn[class][class] {
   font-family: var(--font-family);
-  font-size: var(--iw-ehf-f);
+  font-size: var(--font-size);
   line-height: var(---s-l-myu);
   font-weight: var(--jx-zk-pv);
   outline: 0;
@@ -18998,7 +18998,7 @@ full__margin-bottom {
 }
 .header__search-tabs-item-btn[class][class] {
   font-family: var(--font-family);
-  font-size: var(--iw-ehf-f);
+  font-size: var(--font-size);
   line-height: var(---s-l-myu);
   font-weight: var(--jx-zk-pv);
   border-radius: var(--border-radius);
@@ -22467,7 +22467,7 @@ html :where(img[class*='wp-image-']) {
   -ms-user-select: auto;
   user-select: auto;
   color: var(--f-mkcy-f);
-  font-size: var(--iw-ehf-f);
+  font-size: var(--font-size);
   font-weight: var(--jx-zk-pv);
   height: 48px;
   line-height: 16px;
@@ -22833,7 +22833,7 @@ html :where(img[class*='wp-image-']) {
 }
 .header__search-tabs-item[class][class] {
   outline: 0;
-  font-size: var(--iw-ehf-f);
+  font-size: var(--font-size);
   line-height: var(---s-l-myu);
   display: inline-block;
   font-weight: var(--e-y-j-d-v-j);
@@ -22866,7 +22866,7 @@ html :where(img[class*='wp-image-']) {
 }
 @media (min-width: 1128px) {
   .header__search-tabs-item[class][class] {
-    font-size: var(--iw-ehf-f);
+    font-size: var(--font-size);
     line-height: var(---s-l-myu);
     font-weight: var(--e-y-j-d-v-j);
   }
@@ -22953,7 +22953,7 @@ html :where(img[class*='wp-image-']) {
 }
 @media (min-width: 1128px) {
   .header__search-tabs-item-label-text[class][class] {
-    font-size: var(--iw-ehf-f);
+    font-size: var(--font-size);
     line-height: var(---s-l-myu);
     font-weight: var(--e-y-j-d-v-j);
   }
@@ -22990,7 +22990,7 @@ html :where(img[class*='wp-image-']) {
 }
 .header__search-tabs-item-btn[class][class] {
   font-family: var(--font-family);
-  font-size: var(--iw-ehf-f);
+  font-size: var(--font-size);
   line-height: var(---s-l-myu);
   font-weight: var(--jx-zk-pv);
   border-radius: var(--border-radius);
@@ -23067,7 +23067,7 @@ html :where(img[class*='wp-image-']) {
 }
 .header__search-tabs-links[class][class] {
   outline: 0;
-  font-size: var(--iw-ehf-f);
+  font-size: var(--font-size);
   line-height: var(---s-l-myu);
   display: inline-block;
   font-weight: var(--e-y-j-d-v-j);
@@ -23099,7 +23099,7 @@ html :where(img[class*='wp-image-']) {
 }
 @media (min-width: 1128px) {
   .header__search-tabs-links[class][class] {
-    font-size: var(--iw-ehf-f);
+    font-size: var(--font-size);
     line-height: var(---s-l-myu);
     font-weight: var(--e-y-j-d-v-j);
   }
@@ -23337,7 +23337,7 @@ html :where(img[class*='wp-image-']) {
 }
 .products-container__tablist-btn-1 {
   outline: 0 !important;
-  font-size: var(--iw-ehf-f) !important;
+  font-size: var(--font-size) !important;
   line-height: var(---s-l-myu) !important;
   cursor: pointer !important;
   display: inline-block !important;
@@ -23358,7 +23358,7 @@ html :where(img[class*='wp-image-']) {
 }
 @media (min-width: 1128px) {
   .products-container__tablist-btn-1 {
-    font-size: var(--iw-ehf-f) !important;
+    font-size: var(--font-size) !important;
     line-height: var(---s-l-myu) !important;
     font-weight: var(--e-y-j-d-v-j) !important;
     padding: 0 !important;
@@ -23386,7 +23386,7 @@ html :where(img[class*='wp-image-']) {
 }
 .products-container__tablist-btn-2 {
   outline: 0 !important;
-  font-size: var(--iw-ehf-f) !important;
+  font-size: var(--font-size) !important;
   line-height: var(---s-l-myu) !important;
   cursor: pointer !important;
   display: inline-block !important;
@@ -23407,7 +23407,7 @@ html :where(img[class*='wp-image-']) {
 }
 @media (min-width: 1128px) {
   .products-container__tablist-btn-2 {
-    font-size: var(--iw-ehf-f) !important;
+    font-size: var(--font-size) !important;
     line-height: var(---s-l-myu) !important;
     font-weight: var(--e-y-j-d-v-j) !important;
     padding: 0 !important;
@@ -23427,7 +23427,7 @@ html :where(img[class*='wp-image-']) {
 }
 @media (min-width: 1128px) {
   .products-container__tablist-btn-1-text {
-    font-size: var(--iw-ehf-f) !important;
+    font-size: var(--font-size) !important;
     line-height: var(---s-l-myu) !important;
     font-weight: var(--e-y-j-d-v-j) !important;
   }
@@ -23445,7 +23445,7 @@ html :where(img[class*='wp-image-']) {
 }
 .products-container__tablist-btn-wrapper {
   outline: 0 !important;
-  font-size: var(--iw-ehf-f) !important;
+  font-size: var(--font-size) !important;
   line-height: var(---s-l-myu) !important;
   cursor: pointer !important;
   display: inline-block !important;
@@ -23465,7 +23465,7 @@ html :where(img[class*='wp-image-']) {
 }
 @media (min-width: 1128px) {
   .products-container__tablist-btn-wrapper {
-    font-size: var(--iw-ehf-f) !important;
+    font-size: var(--font-size) !important;
     line-height: var(---s-l-myu) !important;
     font-weight: var(--e-y-j-d-v-j) !important;
   }
@@ -23883,7 +23883,7 @@ html :where(img[class*='wp-image-']) {
   cursor: pointer !important;
   display: inline-block !important;
   font-family: inherit !important;
-  font-size: var(--iw-ehf-f) !important;
+  font-size: var(--font-size) !important;
   font-weight: var(--jx-zk-pv) !important;
   line-height: 16px !important;
   margin: 0 !important;
@@ -24220,7 +24220,7 @@ html :where(img[class*='wp-image-']) {
 }
 @media (min-width: 744px) {
   .cnlfh1x[class][class] {
-    font-size: var(--iw-ehf-f);
+    font-size: var(--font-size);
     line-height: var(---s-l-myu);
   }
 }
@@ -24522,7 +24522,7 @@ html :where(img[class*='wp-image-']) {
 }
 .v7aged4[class][class] {
   font-family: var(--font-family);
-  font-size: var(--iw-ehf-f);
+  font-size: var(--font-size);
   line-height: var(---s-l-myu);
   font-weight: var(--jx-zk-pv);
   outline: 0;
@@ -24914,7 +24914,7 @@ html :where(img[class*='wp-image-']) {
   color: var(--f-k-smk-x);
   font-family: var(--font-family);
   font-weight: var(--jx-zk-pv);
-  font-size: var(--iw-ehf-f);
+  font-size: var(--font-size);
   line-height: var(---s-l-myu);
 }
 .dir-ltr.t9gtck5[class][class] {
@@ -25179,7 +25179,7 @@ html :where(img[class*='wp-image-']) {
   color: var(--f-k-smk-x);
   font-family: var(--font-family);
   font-weight: var(--jx-zk-pv);
-  font-size: var(--iw-ehf-f);
+  font-size: var(--font-size);
   line-height: var(---s-l-myu);
 }
 .dir.t1tlp7t5[class][class] {
@@ -25303,14 +25303,14 @@ html :where(img[class*='wp-image-']) {
   color: var(--f-k-smk-x);
   font-family: var(--font-family);
   font-weight: var(--e-y-j-d-v-j);
-  font-size: var(--iw-ehf-f);
+  font-size: var(--font-size);
   line-height: var(---s-l-myu);
 }
 .hgq99v9[class][class] {
   color: var(--f-k-smk-x);
   font-family: var(--font-family);
   font-weight: var(--jx-zk-pv);
-  font-size: var(--iw-ehf-f);
+  font-size: var(--font-size);
   line-height: var(---s-l-myu);
 }
 .dir.hgq99v9[class][class] {
@@ -25343,7 +25343,7 @@ html :where(img[class*='wp-image-']) {
   color: var(--f-k-smk-x);
   font-family: var(--font-family);
   font-weight: var(--jx-zk-pv);
-  font-size: var(--iw-ehf-f);
+  font-size: var(--font-size);
   line-height: var(---s-l-myu);
 }
 .dir.hpilngu[class][class] {
@@ -25358,7 +25358,7 @@ html :where(img[class*='wp-image-']) {
   color: var(--f-k-smk-x);
   font-family: var(--font-family);
   font-weight: var(--jx-zk-pv);
-  font-size: var(--iw-ehf-f);
+  font-size: var(--font-size);
   line-height: var(---s-l-myu);
 }
 .dir.h4lj7td[class][class] {
@@ -26083,7 +26083,7 @@ html :where(img[class*='wp-image-']) {
   width: auto !important;
   touch-action: manipulation !important;
   font-family: var(--font-family) !important;
-  font-size: var(--iw-ehf-f) !important;
+  font-size: var(--font-size) !important;
   line-height: var(---s-l-myu) !important;
   font-weight: var(--jx-zk-pv) !important;
   border-radius: var(--border-radius) !important;
@@ -27805,7 +27805,7 @@ tr.hide {
 }
 .explore__list-heart-font[class][class] {
   font-family: var(--font-family);
-  font-size: var(--iw-ehf-f);
+  font-size: var(--font-size);
   line-height: var(---s-l-myu);
   font-weight: var(--jx-zk-pv);
   border-radius: var(--border-radius);
@@ -30731,7 +30731,7 @@ tr.hide {
   -ms-touch-action: manipulation !important;
   touch-action: manipulation !important;
   font-family: var(--font-family) !important;
-  font-size: var(--iw-ehf-f) !important;
+  font-size: var(--font-size) !important;
   line-height: var(---s-l-myu) !important;
   font-weight: var(--jx-zk-pv) !important;
   border-radius: var(--border-radius) !important;
@@ -30924,7 +30924,7 @@ tr.hide {
   -ms-touch-action: manipulation !important;
   touch-action: manipulation !important;
   font-family: var(--font-family) !important;
-  font-size: var(--iw-ehf-f) !important;
+  font-size: var(--font-size) !important;
   line-height: var(---s-l-myu) !important;
   font-weight: var(--jx-zk-pv) !important;
   border-radius: var(--border-radius) !important;
@@ -33902,7 +33902,7 @@ tr.hide {
 }
 .explore__list-heart-font[class][class] {
   font-family: var(--font-family);
-  font-size: var(--iw-ehf-f);
+  font-size: var(--font-size);
   line-height: var(---s-l-myu);
   font-weight: var(--jx-zk-pv);
   outline: 0;
@@ -34997,7 +34997,7 @@ tr.hide {
   }
 }
 .pntik8o[class][class] {
-  font-size: var(--iw-ehf-f);
+  font-size: var(--font-size);
   line-height: var(---s-l-myu);
 }
 .p9uyiz2[class][class] {
@@ -35102,7 +35102,7 @@ tr.hide {
 }
 .explore__list-heart-font[class][class] {
   font-family: var(--font-family);
-  font-size: var(--iw-ehf-f);
+  font-size: var(--font-size);
   line-height: var(---s-l-myu);
   font-weight: var(--jx-zk-pv);
   border-radius: var(--border-radius);
@@ -35204,7 +35204,7 @@ tr.hide {
     var(--margin-left, 0);
 }
 .place__nearby-card-loc-overflow[class][class] {
-  font-size: var(--iw-ehf-f);
+  font-size: var(--font-size);
   line-height: var(---s-l-myu);
   line-height: var(---s-l-myu);
   overflow: hidden;
@@ -38557,7 +38557,7 @@ tr.hide {
   -ms-touch-action: manipulation !important;
   touch-action: manipulation !important;
   font-family: var(--font-family) !important;
-  font-size: var(--iw-ehf-f) !important;
+  font-size: var(--font-size) !important;
   line-height: var(---s-l-myu) !important;
   font-weight: var(--jx-zk-pv) !important;
   border-radius: var(--border-radius) !important;
@@ -47163,7 +47163,7 @@ a:hover {
   -ms-touch-action: manipulation !important;
   touch-action: manipulation !important;
   font-family: var(--font-family) !important;
-  font-size: var(--iw-ehf-f) !important;
+  font-size: var(--font-size) !important;
   line-height: var(---s-l-myu) !important;
   font-weight: var(--jx-zk-pv) !important;
   border-radius: var(--border-radius) !important;
@@ -47522,7 +47522,7 @@ a:hover {
   -ms-touch-action: manipulation !important;
   touch-action: manipulation !important;
   font-family: var(--font-family) !important;
-  font-size: var(--iw-ehf-f) !important;
+  font-size: var(--font-size) !important;
   line-height: var(---s-l-myu) !important;
   font-weight: var(--jx-zk-pv) !important;
   border-radius: var(--border-radius) !important;
@@ -49676,9 +49676,9 @@ body {
   --j-p-z-kco: 18px;
   --i-nh-zme: 14px;
   --gvarj-f: 20px;
-  --iw-ehf-f: 16px;
+  --font-size: 16px;
   ---s-l-myu: 20px;
-  --y-g-ar-y: 16px;
+  --font-size: 16px;
   --cb-pewj: 24px;
   --ll-l-ys-f: 18px;
   --f-xgviq: 24px;
@@ -50878,7 +50878,7 @@ body {
   width: auto !important;
   touch-action: manipulation !important;
   font-family: var(--font-family) !important;
-  font-size: var(--iw-ehf-f) !important;
+  font-size: var(--font-size) !important;
   line-height: var(---s-l-myu) !important;
   font-weight: var(--jx-zk-pv) !important;
   border-radius: var(--border-radius) !important;
@@ -51274,7 +51274,7 @@ body {
   text-decoration: none !important;
   touch-action: manipulation !important;
   font-family: var(--font-family) !important;
-  font-size: var(--iw-ehf-f) !important;
+  font-size: var(--font-size) !important;
   line-height: var(---s-l-myu) !important;
   font-weight: var(--jx-zk-pv) !important;
   border-radius: var(--border-radius) !important;
@@ -51591,7 +51591,7 @@ body {
   text-decoration: none !important;
   touch-action: manipulation !important;
   font-family: var(--font-family) !important;
-  font-size: var(--iw-ehf-f) !important;
+  font-size: var(--font-size) !important;
   line-height: var(---s-l-myu) !important;
   font-weight: var(--jx-zk-pv) !important;
   border-radius: var(--border-radius) !important;
@@ -52544,7 +52544,7 @@ body {
 
 .hg6cldq[class][class] {
   font-weight: var(--h-oqhch);
-  font-size: var(--iw-ehf-f);
+  font-size: var(--font-size);
   line-height: var(---s-l-myu);
 }
 
@@ -52592,7 +52592,7 @@ body {
   -ms-touch-action: manipulation !important;
   touch-action: manipulation !important;
   font-family: var(--font-family) !important;
-  font-size: var(--iw-ehf-f) !important;
+  font-size: var(--font-size) !important;
   line-height: var(---s-l-myu) !important;
   font-weight: var(--jx-zk-pv) !important;
   border-radius: var(--border-radius) !important;
