--- a/src/css/components/buttons.css
+++ b/src/css/components/buttons.css
@@ -543,7 +543,7 @@
   -ms-touch-action: manipulation !important;
   touch-action: manipulation !important;
   font-family: var(--font-family) !important;
-  font-size: var(--iw-ehf-f) !important;
+  font-size: var(--font-size) !important;
   line-height: var(---s-l-myu) !important;
   font-weight: var(--jx-zk-pv) !important;
   border-radius: var(--border-radius) !important;
@@ -1101,7 +1101,7 @@
   text-decoration: none !important;
   touch-action: manipulation !important;
   font-family: var(--font-family) !important;
-  font-size: var(--iw-ehf-f) !important;
+  font-size: var(--font-size) !important;
   line-height: var(---s-l-myu) !important;
   font-weight: var(--jx-zk-pv) !important;
   border-radius: var(--border-radius) !important;
@@ -1235,7 +1235,7 @@ fieldset[disabled] .btn {
   -ms-touch-action: manipulation !important;
   touch-action: manipulation !important;
   font-family: var(--font-family) !important;
-  font-size: var(--iw-ehf-f) !important;
+  font-size: var(--font-size) !important;
   line-height: var(---s-l-myu) !important;
   font-weight: var(--jx-zk-pv) !important;
   border-radius: var(--border-radius) !important;
@@ -1452,7 +1452,7 @@ fieldset[disabled] .btn {
   -ms-touch-action: manipulation !important;
   touch-action: manipulation !important;
   font-family: var(--font-family) !important;
-  font-size: var(--iw-ehf-f) !important;
+  font-size: var(--font-size) !important;
   line-height: var(---s-l-myu) !important;
   font-weight: var(--jx-zk-pv) !important;
   border-radius: var(--border-radius) !important;
@@ -1569,7 +1569,7 @@ fieldset[disabled] .btn {
   -ms-touch-action: manipulation !important;
   touch-action: manipulation !important;
   font-family: var(--font-family) !important;
-  font-size: var(--iw-ehf-f) !important;
+  font-size: var(--font-size) !important;
   line-height: var(---s-l-myu) !important;
   font-weight: var(--jx-zk-pv) !important;
   border-radius: var(--border-radius) !important;
@@ -1693,7 +1693,7 @@ fieldset[disabled] .btn {
   width: auto !important;
   touch-action: manipulation !important;
   font-family: var(--font-family) !important;
-  font-size: var(--iw-ehf-f) !important;
+  font-size: var(--font-size) !important;
   line-height: var(---s-l-myu) !important;
   font-weight: var(--jx-zk-pv) !important;
   border-radius: var(--border-radius) !important;
@@ -1725,7 +1725,7 @@ fieldset[disabled] .btn {
   width: auto !important;
   touch-action: manipulation !important;
   font-family: var(--font-family) !important;
-  font-size: var(--iw-ehf-f) !important;
+  font-size: var(--font-size) !important;
   line-height: var(---s-l-myu) !important;
   font-weight: var(--jx-zk-pv) !important;
   border-radius: var(--border-radius) !important;
@@ -1749,7 +1749,7 @@ fieldset[disabled] .btn {
   width: auto !important;
   touch-action: manipulation !important;
   font-family: var(--font-family) !important;
-  font-size: var(--iw-ehf-f) !important;
+  font-size: var(--font-size) !important;
   line-height: var(---s-l-myu) !important;
   font-weight: var(--jx-zk-pv) !important;
   border-radius: var(--border-radius) !important;
@@ -1940,7 +1940,7 @@ fieldset[disabled] .btn {
 }
 .btn-save-bordered[class][class] {
   font-family: var(--font-family);
-  font-size: var(--iw-ehf-f);
+  font-size: var(--font-size);
   line-height: var(---s-l-myu);
   font-weight: var(--jx-zk-pv);
   border-radius: var(--border-radius);
