--- a/src/css/components/cards/card-alt-4.css
+++ b/src/css/components/cards/card-alt-4.css
@@ -555,7 +555,7 @@
   font-weight: var(--title_font-weight);
 }
 .card-alt-4__title[class][class] {
-  font-size: var(--iw-ehf-f);
+  font-size: var(--font-size);
   line-height: var(---s-l-myu);
   line-height: var(---s-l-myu);
   overflow: hidden;
