--- a/src/css/components/cards/card-portrait.css
+++ b/src/css/components/cards/card-portrait.css
@@ -566,7 +566,7 @@
     var(--margin-left, 0);
 }
 .card-portrait__pricing-text {
-  font-size: var(--iw-ehf-f);
+  font-size: var(--font-size);
   line-height: var(---s-l-myu);
 }
 .card-portrait__pricing-price,
