--- a/src/css/components/explore-filter-menu.css
+++ b/src/css/components/explore-filter-menu.css
@@ -8,7 +8,7 @@
   padding-top: var(--spacer-3);
 }
 .explore-filter-menu__price-title[class][class] {
-  font-size: var(--iw-ehf-f);
+  font-size: var(--font-size);
   line-height: var(---s-l-myu);
   font-weight: var(--e-y-j-d-v-j);
   color: var(--fo-jk-r-s);
