--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1643,7 +1643,7 @@
   padding-top: 8px!important
 }
 .t2353uq[class][class] {
-  font-size: var(--iw-ehf-f);
+  font-size: var(--font-size);
   line-height: var(---s-l-myu);
   color: var(--f-k-smk-x);
   font-weight: var(--jx-zk-pv)
