--- a/src/css/root.css
+++ b/src/css/root.css
@@ -88,9 +88,9 @@
   --j-p-z-kco: 18px;
   --i-nh-zme: 14px;
   --gvarj-f: 20px;
-  --iw-ehf-f: 16px;
+  --font-size: 16px;
   ---s-l-myu: 20px;
-  --y-g-ar-y: 16px;
+  --font-size: 16px;
   --cb-pewj: 24px;
   --ll-l-ys-f: 18px;
   --f-xgviq: 24px;
@@ -191,9 +191,9 @@
   --j-p-z-kco: 18px;
   --i-nh-zme: 14px;
   --gvarj-f: 20px;
-  --iw-ehf-f: 16px;
+  --font-size: 16px;
   ---s-l-myu: 20px;
-  --y-g-ar-y: 16px;
+  --font-size: 16px;
   --cb-pewj: 24px;
   --ll-l-ys-f: 18px;
   --f-xgviq: 24px;
@@ -299,9 +299,9 @@
   --j-p-z-kco: 18px;
   --i-nh-zme: 14px;
   --gvarj-f: 20px;
-  --iw-ehf-f: 16px;
+  --font-size: 16px;
   ---s-l-myu: 20px;
-  --y-g-ar-y: 16px;
+  --font-size: 16px;
   --cb-pewj: 24px;
   --ll-l-ys-f: 18px;
   --f-xgviq: 24px;
@@ -420,9 +420,9 @@
     --j-p-z-kco: 18px;
     --i-nh-zme: 14px;
     --gvarj-f: 20px;
-    --iw-ehf-f: 16px;
+    --font-size: 16px;
     ---s-l-myu: 20px;
-    --y-g-ar-y: 16px;
+    --font-size: 16px;
     --cb-pewj: 24px;
     --ll-l-ys-f: 18px;
     --f-xgviq: 24px;
